--- a/po/fi.po
+++ b/po/fi.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: switchboard-plug-bluetooth\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2016-12-16 18:01-0800\n"
-"PO-Revision-Date: 2016-12-16 23:29+0000\n"
+"PO-Revision-Date: 2016-12-17 17:56+0000\n"
 "Last-Translator: Jiri Grönroos <Unknown>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2016-12-17 05:43+0000\n"
+"X-Launchpad-Export-Date: 2016-12-18 05:35+0000\n"
 "X-Generator: Launchpad (build 18298)\n"
 
 #: ../src/Plug.vala:30 ../src/MainView.vala:73
@@ -35,8 +35,8 @@ msgstr "Unohda valittu laite"
 
 #: ../src/MainView.vala:192
 msgid "Now Discoverable as \"%s\""
-msgstr ""
+msgstr "Nyt löydettävissä nimellä \"%s\""
 
 #: ../src/MainView.vala:202
 msgid "Now Discoverable as %s"
-msgstr ""
+msgstr "Nyt löydettävissä nimellä %s"
