--- a/po/ko.po
+++ b/po/ko.po
@@ -8,35 +8,35 @@ msgstr ""
 "Project-Id-Version: switchboard-plug-bluetooth\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2016-12-16 18:01-0800\n"
-"PO-Revision-Date: 2016-12-15 05:27+0000\n"
+"PO-Revision-Date: 2016-12-18 02:38+0000\n"
 "Last-Translator: Jung-Kyu Park <bagjunggyu@gmail.com>\n"
 "Language-Team: Korean <ko@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2016-12-17 05:43+0000\n"
+"X-Launchpad-Export-Date: 2016-12-18 05:35+0000\n"
 "X-Generator: Launchpad (build 18298)\n"
 
 #: ../src/Plug.vala:30 ../src/MainView.vala:73
 msgid "Bluetooth"
-msgstr ""
+msgstr "블루투스"
 
 #: ../src/Plug.vala:31
 msgid "Configure Bluetooth Settings"
-msgstr ""
+msgstr "블루투스 설정 구성"
 
 #: ../src/MainView.vala:94
 msgid "Discover new device"
-msgstr ""
+msgstr "새 장치 찾기"
 
 #: ../src/MainView.vala:99
 msgid "Forget selected device"
-msgstr ""
+msgstr "선택했던 장치 지우기"
 
 #: ../src/MainView.vala:192
 msgid "Now Discoverable as \"%s\""
-msgstr ""
+msgstr "\"%s\" 찾음"
 
 #: ../src/MainView.vala:202
 msgid "Now Discoverable as %s"
-msgstr ""
+msgstr "%s 찾음"
