--- a/po/es.po
+++ b/po/es.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: switchboard-plug-bluetooth\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2016-12-16 18:01-0800\n"
-"PO-Revision-Date: 2016-12-17 02:01+0000\n"
+"POT-Creation-Date: 2016-12-18 12:24-0800\n"
+"PO-Revision-Date: 2016-12-18 21:44+0000\n"
 "Last-Translator: Daniel Fore <Unknown>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2016-12-18 05:35+0000\n"
+"X-Launchpad-Export-Date: 2016-12-19 05:54+0000\n"
 "X-Generator: Launchpad (build 18298)\n"
 
 #: ../src/Plug.vala:30 ../src/MainView.vala:73
@@ -25,6 +25,58 @@ msgstr "Bluetooth"
 msgid "Configure Bluetooth Settings"
 msgstr ""
 
+#: ../src/DeviceRow.vala:35
+msgid "Connected"
+msgstr "Conectado"
+
+#: ../src/DeviceRow.vala:37
+msgid "Connecting…"
+msgstr "Conectando…"
+
+#: ../src/DeviceRow.vala:39
+msgid "Disconnecting…"
+msgstr "Desconectando…"
+
+#: ../src/DeviceRow.vala:41
+msgid "Unable to Connnect"
+msgstr ""
+
+#: ../src/DeviceRow.vala:43
+msgid "Not Connected"
+msgstr "No Conectado"
+
+#: ../src/DeviceRow.vala:85
+msgid "Sharing Settings"
+msgstr "Configuración de Compartición"
+
+#: ../src/DeviceRow.vala:107
+msgid "Sound Settings"
+msgstr "Configuración del Sonido"
+
+#: ../src/DeviceRow.vala:112
+msgid "Keyboard Settings"
+msgstr "Configuración del Teclado"
+
+#: ../src/DeviceRow.vala:116
+msgid "Mouse & Touchpad Settings"
+msgstr "Configuración de Ratón y Touchpad"
+
+#: ../src/DeviceRow.vala:120
+msgid "Drawing Tablet Settings"
+msgstr ""
+
+#: ../src/DeviceRow.vala:124
+msgid "Printer Settings"
+msgstr "Configuración de la Impresora"
+
+#: ../src/DeviceRow.vala:187
+msgid "Disconnect"
+msgstr "Desconectar"
+
+#: ../src/DeviceRow.vala:200
+msgid "Connect"
+msgstr "Conectar"
+
 #: ../src/MainView.vala:94
 msgid "Discover new device"
 msgstr ""
@@ -33,10 +85,6 @@ msgstr ""
 msgid "Forget selected device"
 msgstr ""
 
-#: ../src/MainView.vala:192
+#: ../src/HeaderAdapter.vala:33 ../src/HeaderAdapter.vala:57
 msgid "Now Discoverable as \"%s\""
-msgstr ""
-
-#: ../src/MainView.vala:202
-msgid "Now Discoverable as %s"
 msgstr ""
