--- a/po/ko.po
+++ b/po/ko.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: switchboard-plug-bluetooth\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2016-12-16 18:01-0800\n"
-"PO-Revision-Date: 2016-12-18 02:38+0000\n"
+"POT-Creation-Date: 2016-12-18 12:24-0800\n"
+"PO-Revision-Date: 2016-12-18 22:19+0000\n"
 "Last-Translator: Jung-Kyu Park <bagjunggyu@gmail.com>\n"
 "Language-Team: Korean <ko@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2016-12-18 05:35+0000\n"
+"X-Launchpad-Export-Date: 2016-12-19 05:54+0000\n"
 "X-Generator: Launchpad (build 18298)\n"
 
 #: ../src/Plug.vala:30 ../src/MainView.vala:73
@@ -25,6 +25,58 @@ msgstr "블루투스"
 msgid "Configure Bluetooth Settings"
 msgstr "블루투스 설정 구성"
 
+#: ../src/DeviceRow.vala:35
+msgid "Connected"
+msgstr "연결됨"
+
+#: ../src/DeviceRow.vala:37
+msgid "Connecting…"
+msgstr "연결하고 있습니다..."
+
+#: ../src/DeviceRow.vala:39
+msgid "Disconnecting…"
+msgstr "연결을 끊고 있습니다..."
+
+#: ../src/DeviceRow.vala:41
+msgid "Unable to Connnect"
+msgstr "연결할 수 없음"
+
+#: ../src/DeviceRow.vala:43
+msgid "Not Connected"
+msgstr "연결되지 않음"
+
+#: ../src/DeviceRow.vala:85
+msgid "Sharing Settings"
+msgstr "설정 공유"
+
+#: ../src/DeviceRow.vala:107
+msgid "Sound Settings"
+msgstr "소리 설정"
+
+#: ../src/DeviceRow.vala:112
+msgid "Keyboard Settings"
+msgstr "키보드 설정"
+
+#: ../src/DeviceRow.vala:116
+msgid "Mouse & Touchpad Settings"
+msgstr "마우스와 터치패드 설정"
+
+#: ../src/DeviceRow.vala:120
+msgid "Drawing Tablet Settings"
+msgstr "그림용 태블릿 설정"
+
+#: ../src/DeviceRow.vala:124
+msgid "Printer Settings"
+msgstr "프린터 설정"
+
+#: ../src/DeviceRow.vala:187
+msgid "Disconnect"
+msgstr "끊기"
+
+#: ../src/DeviceRow.vala:200
+msgid "Connect"
+msgstr "연결"
+
 #: ../src/MainView.vala:94
 msgid "Discover new device"
 msgstr "새 장치 찾기"
@@ -33,10 +85,6 @@ msgstr "새 장치 찾기"
 msgid "Forget selected device"
 msgstr "선택했던 장치 지우기"
 
-#: ../src/MainView.vala:192
+#: ../src/HeaderAdapter.vala:33 ../src/HeaderAdapter.vala:57
 msgid "Now Discoverable as \"%s\""
-msgstr "\"%s\" 찾음"
-
-#: ../src/MainView.vala:202
-msgid "Now Discoverable as %s"
-msgstr "%s 찾음"
+msgstr "\"%s\"에 연결"
