--- a/po/ak.po
+++ b/po/ak.po
@@ -1,4 +1,4 @@
-# Spanish translation for switchboard-plug-bluetooth
+# Akan translation for switchboard-plug-bluetooth
 # Copyright (c) 2016 Rosetta Contributors and Canonical Ltd 2016
 # This file is distributed under the same license as the switchboard-plug-bluetooth package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2016.
@@ -8,9 +8,9 @@ msgstr ""
 "Project-Id-Version: switchboard-plug-bluetooth\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2016-12-18 12:24-0800\n"
-"PO-Revision-Date: 2016-12-20 17:28+0000\n"
-"Last-Translator: abelinux <Unknown>\n"
-"Language-Team: Spanish <es@li.org>\n"
+"PO-Revision-Date: 2016-12-20 17:34+0000\n"
+"Last-Translator: aberba <karabutaworld@gmail.com>\n"
+"Language-Team: Akan <ak@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -23,68 +23,68 @@ msgstr "Bluetooth"
 
 #: ../src/Plug.vala:31
 msgid "Configure Bluetooth Settings"
-msgstr "Configurar ajustes de Bluetooth"
+msgstr "Yɛ Wo Bluetooth Ho Nhyehyɛe"
 
 #: ../src/DeviceRow.vala:35
 msgid "Connected"
-msgstr "Conectado"
+msgstr "Woakɔnekte"
 
 #: ../src/DeviceRow.vala:37
 msgid "Connecting…"
-msgstr "Conectando…"
+msgstr "Ɛrekɔnekte…"
 
 #: ../src/DeviceRow.vala:39
 msgid "Disconnecting…"
-msgstr "Desconectando…"
+msgstr "Ɛregyae kɔnekte…"
 
 #: ../src/DeviceRow.vala:41
 msgid "Unable to Connnect"
-msgstr "No Pudo Conectarse"
+msgstr "Antumi ankɔnekte"
 
 #: ../src/DeviceRow.vala:43
 msgid "Not Connected"
-msgstr "No Conectado"
+msgstr "Ɛnkɔnektee"
 
 #: ../src/DeviceRow.vala:85
 msgid "Sharing Settings"
-msgstr "Configuración de Compartición"
+msgstr "Sharing Ho Nhyehyɛe"
 
 #: ../src/DeviceRow.vala:107
 msgid "Sound Settings"
-msgstr "Configuración del Sonido"
+msgstr "Dede Ho Nhyehyɛe"
 
 #: ../src/DeviceRow.vala:112
 msgid "Keyboard Settings"
-msgstr "Configuración del Teclado"
+msgstr "Keyboard Ho Nhyehyɛe"
 
 #: ../src/DeviceRow.vala:116
 msgid "Mouse & Touchpad Settings"
-msgstr "Configuración de Ratón y Touchpad"
+msgstr "Mouse Ne Touchpad Ho Nhyehyɛe"
 
 #: ../src/DeviceRow.vala:120
 msgid "Drawing Tablet Settings"
-msgstr "Ajustes de Tableta de Dibujo"
+msgstr "Tablɛt a Wɔde Drɔɔ Ho Nhyehyɛe"
 
 #: ../src/DeviceRow.vala:124
 msgid "Printer Settings"
-msgstr "Configuración de la Impresora"
+msgstr "Printer  Ho Nhyehyɛe"
 
 #: ../src/DeviceRow.vala:187
 msgid "Disconnect"
-msgstr "Desconectar"
+msgstr "Gyae kɔnekte"
 
 #: ../src/DeviceRow.vala:200
 msgid "Connect"
-msgstr "Conectar"
+msgstr "Kɔnɛkte"
 
 #: ../src/MainView.vala:94
 msgid "Discover new device"
-msgstr "Buscar nuevo dispositivo"
+msgstr "Hwehwɛ Device foforɔ"
 
 #: ../src/MainView.vala:99
 msgid "Forget selected device"
-msgstr "Olvidar dispositivo seleccionado"
+msgstr "Yi Device a woapaw no firi so"
 
 #: ../src/HeaderAdapter.vala:33 ../src/HeaderAdapter.vala:57
 msgid "Now Discoverable as \"%s\""
-msgstr "Ahora Visible como \"%s\""
+msgstr "Seisei ɛhu no sɛ \"%s\""
